--- a/API/Python/requirements.txt
+++ b/API/Python/requirements.txt
@@ -1,4 +1,7 @@
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-python-multipart>=0.0.6
-
+fastapi
+uvicorn
+numpy
+pandas
+load_dotenv
+azure-cosmos
+azure-storage-blob
